--- a/kız.html
+++ b/kız.html
@@ -66,7 +66,10 @@
     <p> **parayı harcamasını bilecen gerekirse fazla mesai yapacan gezdircen 
       </p>
 
-      <h4><p class="text-center">Ustasından Kız Tavlama Taktikleri </p></h4>
+      <h6><p class="text-center">Parasız Erkeği Annesi Sever</p></h6>
+
+
+   <h3><p class="text-left">Uzm.Dr Osman Said EVLİCE</p></h3>
       </div>
     </div>
 </div>
